Moving things around again.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,10 @@
             "env":{
                 "GOPATH": "${workspaceRoot}/.go"
             },
+            "cwd": "./",
             "args": [
-                "build"
             ],
-            "program": "${workspaceRoot}/src/main.go"
+            "program": "${workspaceRoot}/darch.go"
         }
     ]
 }
