Removed push/pull. We will use docker directly for that.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "taskName": "Build",
             "type": "shell",
-            "command": "${workspaceRoot}/go build darch.go"
+            "command": "make"
         }
     ]
 }
