Added custom arch-chroot to handle custom mount pointers.
Changed the extractions directory.
Added support for caching packages across builds, saving time on building.

Former-commit-id: 225ca30ae9b5aa30f1cae2962871f6f2a6b84e55

--- a/rootfs/arch/Dockerfile
+++ b/rootfs/arch/Dockerfile
@@ -7,6 +7,9 @@ RUN pacman -S --noconfirm arch-install-scripts squashfs-tools
 # Add our rootfs
 ADD rootfs.tar.gz /
 
+# Add custom arch-chroot that handles custom mounts
+ADD arch-chroot-custom /usr/sbin/
+
 # Add our cpio hooks to be used when building the image
 ADD initcpio-hooks/ /initcpio-hooks
 RUN mkdir -p /root.x86_64/etc/mkinitcpio.d/
