Added support for listing parents for an image.
Former-commit-id: 8f274160cc1193b2a804209e1d68cc29c54caf61

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,15 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch file",
+            "name": "Launch",
             "type": "go",
             "request": "launch",
             "mode": "debug",
             "env":{
                 "GOPATH": "${workspaceRoot}/.go"
             },
-            "cwd": "./",
+            "cwd": "/home/pknopf/git/darch-images",
             "args": [
+                "inspect",
+                "plasma"
             ],
             "program": "${workspaceRoot}/darch.go"
         }
