Simplified building by delegating out commands to the rootfs builder image.
Former-commit-id: 427ca2c080db8687897969f421d3ee4908b94d27

--- a/rootfs/arch/Dockerfile
+++ b/rootfs/arch/Dockerfile
@@ -18,8 +18,9 @@ RUN cp /initcpio-hooks/darch-mkinitcpio.conf /root.x86_64/etc/mkinitcpio.conf
 RUN mkdir -p /root.x86_64/usr/lib/initcpio/hooks && cp /initcpio-hooks/darch.hook /root.x86_64/usr/lib/initcpio/hooks/darch
 RUN mkdir -p /root.x86_64/usr/lib/initcpio/install && cp /initcpio-hooks/darch.install /root.x86_64/usr/lib/initcpio/install/darch
 
-RUN echo "#!/bin/bash" >> /start && \
-    echo "while true; do sleep 100; done" >> /start && \
-    chmod +x /start
+ADD helpers/darch-longrunning /
+ADD helpers/darch-prepare /
+ADD helpers/darch-runimage /
+ADD helpers/darch-teardown /
 
-CMD [ "/start" ]
+CMD [ "/darch-longrunning" ]
