/dev/shm fails on travis, not needed for building.
Former-commit-id: 1d88cee5b7534cbd6630775a6a2b7b45933db247

--- a/rootfs/arch/Dockerfile
+++ b/rootfs/arch/Dockerfile
@@ -9,6 +9,7 @@ ADD rootfs.tar.gz /
 
 # Add custom arch-chroot that handles custom mounts
 ADD arch-chroot-custom /usr/sbin/
+ADD arch-chroot /usr/sbin
 
 # Add our cpio hooks to be used when building the image
 ADD initcpio-hooks/ /initcpio-hooks
