Changing how things work a little. Now more "extraction" phase.
Now, there is only "staged". Items "staged" will be able to be booted. Also, moved some OS-specific stuff from golang to Docker image. This sets us up to use void/gentoo in the future.

Former-commit-id: 40ac8591b0a73dd7b131f430c4e82f865ade113e

--- a/rootfs/arch/Dockerfile
+++ b/rootfs/arch/Dockerfile
@@ -23,5 +23,6 @@ ADD helpers/darch-longrunning /
 ADD helpers/darch-prepare /
 ADD helpers/darch-runimage /
 ADD helpers/darch-teardown /
+ADD helpers/darch-extract /
 
 CMD [ "/darch-longrunning" ]
