Print a list (that can be awk'd) of all the currently staged items.
This will allow us to easier build the grub.config.

Former-commit-id: c6724aee1415d5b3b33a8fa10ae2fc663fdc00ed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,8 +14,8 @@
             },
             "cwd": "/home/pknopf/git/darch-images",
             "args": [
-                "inspect",
-                "plasma"
+                "stage",
+                "list"
             ],
             "program": "${workspaceRoot}/darch.go"
         }
