--- a/rootfs/arch/build
+++ b/rootfs/arch/build
@@ -4,4 +4,4 @@ set -e
 # Let's build the base Docker image.
 # This image is a runnable Arch image, but it won't be used for much.
 # Inside of the image will be a /rootfs that will be updating.
-docker build -t darch-arch-rootfs-builder .
+docker build --no-cache -t darch-arch-rootfs-builder .
