Added lvm to initcpio for Arch.
Former-commit-id: f21a6981e10e3c5511796697646909ac45a750ac

--- a/rootfs/arch/initcpio-hooks/darch-mkinitcpio.conf
+++ b/rootfs/arch/initcpio-hooks/darch-mkinitcpio.conf
@@ -1,4 +1,4 @@
 MODULES=""
 BINARIES=""
 FILES=""
-HOOKS="base udev modconf block filesystems keyboard fsck darch"
+HOOKS="base udev modconf block lvm2 filesystems keyboard fsck darch"
