--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,12 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceRoot}/main.go"
+            "program": "${workspaceRoot}/cmd/darch/main.go",
+            "args": [
+                "images",
+                "pull",
+                "sdf"
+            ]
         }
     ]
 }
