--- a/vendor.conf
+++ b/vendor.conf
@@ -1,5 +1,5 @@
 github.com/disiqueira/gotree 0.2.0
-github.com/containerd/containerd 9b55aab90508bd389d7654c4baf173a981477d55
+github.com/containerd/containerd 0fcd83238546883ae5c59af06305f58768eef0ae https://github.com/pauldotknopf/containerd
 github.com/coreos/go-systemd 48702e0da86bd25e76cfef347e2adeb434a0d0a6
 github.com/containerd/go-runc ed1cbe1fc31f5fb2359d3a54b6330d1a097858b7
 github.com/containerd/console 84eeaae905fa414d03e07bcd6c8d3f19e7cf180e
