--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,11 +6,10 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "${workspaceRoot}/cmd/darch/main.go",
+            "program": "${workspaceRoot}/pkg/cmd/darch/main.go",
             "args": [
-                "images",
-                "pull",
-                "sdf"
+                "stage",
+                "run-hooks"
             ]
         }
     ]
