Working on the build.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "terminal.integrated.fontSize": 15
+    "terminal.integrated.fontSize": 15,
+    "go.formatTool": "gofmt",
+    "go.formatFlags": [
+        "-s"
+    ]
 }
