--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 language: go
 go:
   - 1.9.2
+services:
+  - docker
 go_import_path: github.com/pauldotknopf/darch
 install:
   - go get github.com/magefile/mage
