Fixed bug with ssh hook not working.
Using Makefile instead of mage.

Added support for including conatinerd and runc in the build.

Squashing the base arch image.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ go:
 services:
   - docker
 go_import_path: github.com/pauldotknopf/darch
-install:
-  - go get github.com/magefile/mage
+before_install:
+  - echo "deb http://archive.ubuntu.com/ubuntu trusty-backports main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libseccomp-dev/trusty-backports
 script:
-  - mage ci
+  - make ci BUNDLE_RUNTIME="yes"
