--- a/vendor.conf
+++ b/vendor.conf
@@ -1,12 +1,12 @@
 github.com/disiqueira/gotree 0.2.0
-github.com/containerd/containerd 1cd32fa68d604dfb439881eb821693c01d399e36
+github.com/containerd/containerd eed3b1c804bff194e2b53685a2cd95077e8aaaba
 github.com/containerd/console 84eeaae905fa414d03e07bcd6c8d3f19e7cf180e
 github.com/containerd/typeurl f6943554a7e7e88b3c14aad190bf05932da84788
 github.com/docker/go-events 9461782956ad83b30282bf90e31fa6a70c255ba9
 github.com/gogo/protobuf v0.5
 github.com/golang/protobuf 1643683e1b54a9e88ad26d98f81400c8c9d9f4f9
-github.com/opencontainers/runtime-spec v1.0.0
-github.com/opencontainers/runc 7f24b40cc5423969b4554ef04ba0b00e2b4ba010
+github.com/opencontainers/runtime-spec v1.0.1
+github.com/opencontainers/runc 9f9c96235cc97674e935002fc3d78361b696a69e
 github.com/sirupsen/logrus v1.0.0
 github.com/containerd/btrfs cc52c4dea2ce11a44e6639e561bb5c2af9ada9e3
 github.com/containerd/fifo fbfb6a11ec671efbe94ad1c12c2e98773f19e1e6
@@ -16,12 +16,13 @@ google.golang.org/grpc v1.7.2
 github.com/pkg/errors v0.8.0
 github.com/opencontainers/go-digest 21dfd564fd89c944783d00d069f33e3e7123c448
 golang.org/x/sys 314a259e304ff91bd6985da2a7149bbf91237993 https://github.com/golang/sys
-github.com/opencontainers/image-spec v1.0.0
+github.com/opencontainers/image-spec v1.0.1
 github.com/containerd/continuity cf279e6ac893682272b4479d4c67fd3abf878b4e
 golang.org/x/sync 450f422ab23cf9881c94e2db30cac0eb1b7cf80c
-github.com/Microsoft/go-winio v0.4.4
+github.com/Microsoft/go-winio v0.4.5
 google.golang.org/genproto d80a6e20e776b0b17a324d0ba1ab50a39c8e8944
 golang.org/x/text 19e51611da83d6be54ddafce4a4af510cb3e9ea4
 github.com/gobwas/glob 51eb1ee00b6d931c66d229ceeb7c31b985563420
 github.com/docker/docker 89658bed64c2a8fe05a978e5b87dbec409d57a0f
 github.com/openconfig/goyang b901ade07fd91817e157c379573bb6ae52b1080b
+github.com/syndtr/gocapability db04d3cc01c8b54962a58ec7e491717d06cfcc16
