--- a/rootfs/build
+++ b/rootfs/build
@@ -8,5 +8,5 @@ fi
 # Let's build the base Docker image.
 # This image is a runnable Arch image, but it won't be used for much.
 # Inside of the image will be a /rootfs that will be updating.
-docker build --squash -t pauldotknopf/darch-arch-rootfs-builder .
-docker push pauldotknopf/darch-arch-rootfs-builder
+docker build --squash -t godarch/arch .
+docker push godarch/arch
