Expanding the ImageRef implementation a little bit, in preperation for #12.

--- a/vendor.conf
+++ b/vendor.conf
@@ -24,5 +24,6 @@ google.golang.org/genproto d80a6e20e776b0b17a324d0ba1ab50a39c8e8944
 golang.org/x/text 19e51611da83d6be54ddafce4a4af510cb3e9ea4
 github.com/gobwas/glob 51eb1ee00b6d931c66d229ceeb7c31b985563420
 github.com/docker/docker 89658bed64c2a8fe05a978e5b87dbec409d57a0f
+github.com/docker/distribution b38e5838b7b2f2ad48e06ec4b500011976080621
 github.com/openconfig/goyang b901ade07fd91817e157c379573bb6ae52b1080b
 github.com/syndtr/gocapability db04d3cc01c8b54962a58ec7e491717d06cfcc16
