Added releasing back into ci.
Removed the "bundled" option in the install script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libseccomp-dev/trusty-backports
 script:
-  - make ci BUNDLE_RUNTIME="yes"
+  - make ci
