Adding github.com/docker/go-units dependency

--- a/vendor.conf
+++ b/vendor.conf
@@ -19,6 +19,7 @@ github.com/gogo/protobuf v1.0.0
 github.com/gogo/googleapis 08a7655d27152912db7aaf4f983275eaf8d128ef
 github.com/gobwas/glob 51eb1ee00b6d931c66d229ceeb7c31b985563420
 github.com/docker/go-events 9461782956ad83b30282bf90e31fa6a70c255ba9
+github.com/docker/go-units v0.3.1
 github.com/docker/distribution b38e5838b7b2f2ad48e06ec4b500011976080621
 github.com/docker/docker 86f080cff0914e9694068ed78d503701667c4c00
 github.com/containerd/console c12b1e7919c14469339a5d38f2f8ed9b64a9de23
